# ai-customer-support-agent

./: .env.example  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  agent.py  categorizer.py  knowledge_base.py  main.py  pyproject.toml  requirements.txt  sessions.json  storage.py
.github/workflows/: ci.yml
